style: prevent footer checkout button and display total from stretching on large totals

--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,9 @@ footer>span{
     font-size: 1rem;
     font-weight: 800;
     color: #181028;
+    /* border: 1px solid red; */
+    flex-shrink: 0; 
+
 }
 footer>button{
     background-color: green;
@@ -133,5 +136,6 @@ footer>button{
     font-size: 14px;
     font-weight: 400;
     border-radius: 50px;
-    padding: 12px 20px;
+    padding: 12px 14px;
+    flex-shrink: 0; 
 }
